Termino de tema

--- a/lms/templates/footer.html
+++ b/lms/templates/footer.html
@@ -12,40 +12,40 @@
 <footer class="theme-footer">
   <div class="theme-footer_holder">
     <div class="theme-footer_section">
-      <span class="theme-footer_text">If you have some questions please contact us</span>
-      <a class="theme-btn" href="/contact">Contact us</a>
+      <!--<span class="theme-footer_text"></span>
+      <a class="theme-btn" href="/contact"></a> -->
     </div>
   </div>
   <div class="theme-footer_holder theme-footer_holder__color">
     <div class="theme-footer_wrapper">
       <div class="theme-footer_col">
-        <h2 class="theme-footer_col-header">About the university</h2>
+        <h2 class="theme-footer_col-header">Acerca de</h2>
         <div class="theme-footer_col-holder">
-          <a class="theme-footer_col-link" target="_blank" href="https://raccoongang.com/en/raccoon-university/">Raccoon Gang University</a>  
+          <a class="theme-footer_col-link" target="_blank" href="http://www.institutofrancisbacon.mx/">Instituto Francis Bacon</a>  
         </div>
         <div class="theme-footer_col-holder">
-          <a class="theme-footer_col-link" target="_blank" href="https://raccoongang.com/en/about-us/">About Us</a>
+          <a class="theme-footer_col-link" target="_blank" href="http://www.institutofrancisbacon.mx/nosotros-preparatoria-en-linea/">Nosotros</a>
         </div>
         <div class="theme-footer_col-holder">
-          <a class="theme-footer_col-link" target="_blank" href="https://raccoongang.com/en/open-edx-services/">eDX Services</a>
+          <a class="theme-footer_col-link" target="_blank" href="http://www.institutofrancisbacon.mx/modelo-educativo/">Modelo educativo</a>
         </div>
         <div class="theme-footer_col-holder">
-          <a class="theme-footer_col-link" target="_blank" href="https://raccoongang.com/en/blog/">Blog</a>
-        </div>
-      </div>
-      <div class="theme-footer_col">
-        <h2 class="theme-footer_col-header">courses</h2>
-        <div class="theme-footer_col-holder">
-          <a class="theme-footer_col-link" href="https://${settings.CMS_BASE}">Create Course Now</a>
+          <a class="theme-footer_col-link" target="_blank" href="http://www.institutofrancisbacon.mx/bolsa-de-trabajo-preparatoria-en-linea/">Inscipciones</a>
         </div>
       </div>
       <div class="theme-footer_col">
-        <h2 class="theme-footer_col-header">Contact us</h2>
+        <h2 class="theme-footer_col-header">Plataforma</h2>
         <div class="theme-footer_col-holder">
-          <a class="theme-footer_col-link" href="/contact">Contact Us</a>
+          <a class="theme-footer_col-link" href="/honor">Codigo de Honor</a>
         </div>
+       <div class="theme-footer_col-holder">
+          <a class="theme-footer_col-link" href="/privacy">Pol&iacute;tica de Privacidad</a>
+        </div>
+      </div>
+      <div class="theme-footer_col">
+        <h2 class="theme-footer_col-header">Contacto</h2>
         <div class="theme-footer_col-holder">
-          <a class="theme-footer_col-link" target="_blank" href="https://raccoongang.com/en/contact-us/">Help</a>
+          <a class="theme-footer_col-link" href="http://www.institutofrancisbacon.mx/contacto-preparatoria-en-linea/">Contactanos</a>
         </div>
       </div>
     </div>
