--- a/lms/templates/index.html
+++ b/lms/templates/index.html
@@ -15,15 +15,15 @@ from openedx.core.djangolib.markup import HTML, Text
           <img class="promo-box_img" src="/static/${settings.DEFAULT_SITE_THEME}/images/promo-box/promo-img.jpg" alt="promo img">
           <div class="promo-box_helper"></div>
           <div class="promo-box_holder">
-            <span class="promo-box_text">the best theme for education</span>
-            <h1 class="promo-box_heading">Welcome to University!</h1>
-            <a class="theme-btn theme-btn__invert" href="/courses">start learning now</a>
+            <span class="promo-box_text"></span>
+            <h1 class="promo-box_heading"></h1>
+            <a class="theme-btn theme-btn__invert" href="/courses">¡Empieza ahora!</a>
           </div>
         </div>
       </section>
 
       <section class="theme-courses_wrapper">
-        <h1 class="theme-courses_heading">Our Courses</h1>
+        <h1 class="theme-courses_heading">Nuestros cursos</h1>
           <section class="theme-courses">
             <%include file="${courses_list}" />
           </section>
